<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16dp"
    tools:context=".presentation.fragments.LendFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/volunteerNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:hint="@string/warehouse_control_volunteer_label"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/volunteerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/itemsInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_width="match_parent"
        android:hint="@string/warehouse_control_select_items_hint"
        android:layout_below="@id/volunteerNameInputLayout"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/itemsEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemsInputLayout"
        android:layout_above="@id/saveButton"
        android:paddingVertical="@dimen/dimen_8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/warehouse_control_list_item"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:text="@string/warehouse_control_save_button_label"
        android:layout_alignParentBottom="true" />

</RelativeLayout>