<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/warehouse_control_white"
    tools:context=".presentation.fragments.ItemRegisterFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/saveButton">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/photo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/warehouse_control_icon_image" />

            <ImageView
                android:id="@+id/addPhotoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/dimen_16dp"
                android:src="@drawable/warehouse_control_icon_add_photo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/photo"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:hint="@string/warehouse_control_item_name"
                android:padding="@dimen/dimen_16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameInputLayout"
                android:hint="@string/warehouse_control_description_hint"
                android:paddingHorizontal="@dimen/dimen_16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_16dp"
        android:enabled="false"
        android:text="@string/warehouse_control_save_button_label" />
</RelativeLayout>